load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "rewrite_config.go",
        "zanzibar.go",
    ],
    importpath = "github.com/mishudark/zanzibar-startup/pkg/zanzibar",
    visibility = ["//visibility:public"],
    deps = ["@in_gopkg_yaml_v3//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["zanzibar_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
)
