load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["badger.go"],
    importpath = "github.com/mishudark/zanzibar-startup/pkg/zanzibar/store/badger",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/zanzibar:go_default_library",
        "@com_github_dgraph_io_badger_v2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["badger_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/zanzibar:go_default_library",
        "@com_github_dgraph_io_badger_v2//:go_default_library",
    ],
)
